UI optimization + information about iLvl of dropped item

--- a/idle.html
+++ b/idle.html
@@ -136,12 +136,12 @@
 						<div style="height: 33%;width: 100%;display: flex;justify-content: center;align-items: center;">! NEW ITEM !</div>
 						<div style="height: 67%; width: 100%; display: flex;">
 							<span style="width: 50%; height: 100%;">
-								<div id="battle_window_drops_name" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
-								<div id="battle_window_drops_rarity" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
+								<div id="battle_window_drops_name" class="battle_window_drops_statistic"></div>
+								<div id="battle_window_drops_rarity" class="battle_window_drops_statistic"></div>
 							</span>
 							<span style="width: 50%; height: 100%;">
-								<div id="battle_window_drops_slot" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
-								<div id="battle_window_drops_power" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
+								<div id="battle_window_drops_slot" class="battle_window_drops_statistic"></div>
+								<div id="battle_window_drops_power" class="battle_window_drops_statistic"></div>
 							</span>
 						</div>
 					</div>
