--- a/idle.html
+++ b/idle.html
@@ -276,30 +276,41 @@
 
 			<!-- EQUIPMENT -->
 			<div class = "task_window" id="equipment_window" style="display: none;">
+				<div style="display: flex; height: 5%; border-bottom:#000 solid 1px;">
+					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Slot</span>
+					<span class="equipment_slot_info" style="width: 10%;">ilvl</span>
+					<span class="equipment_slot_info" style="width: 15%;">Power</span>
+					<span class="equipment_slot_info" style="width: 55%;">Item Name</span>
+				</div>
 				<div class="equipment_slot" id="equipment_helmet">
 					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Helmet: </span>
-					<span class="equipment_slot_info" style="width: 10%;" id="equipment_helmet_power">0</span>
-					<span class="equipment_slot_info" style="width: 70%;" id="equipment_helmet_name">None</span>
+					<span class="equipment_slot_info" style="width: 10%;" id="equipment_helmet_level">0</span>
+					<span class="equipment_slot_info" style="width: 15%;" id="equipment_helmet_power">0</span>
+					<span class="equipment_slot_info" style="width: 55%;" id="equipment_helmet_name">None</span>
 				</div>
 				<div class="equipment_slot" id="equipment_body_armour">
 					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Body Armour: </span>
-					<span class="equipment_slot_info" style="width: 10%;" id="equipment_body_armour_power">0</span>
-					<span class="equipment_slot_info" style="width: 70%;" id="equipment_body_armour_name">None</span>
+					<span class="equipment_slot_info" style="width: 10%;" id="equipment_body_armour_level">0</span>
+					<span class="equipment_slot_info" style="width: 15%;" id="equipment_body_armour_power">0</span>
+					<span class="equipment_slot_info" style="width: 55%;" id="equipment_body_armour_name">None</span>
 				</div>
 				<div class="equipment_slot" id="equipment_gloves">
 					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Gloves: </span>
-					<span class="equipment_slot_info" style="width: 10%;" id="equipment_gloves_power">0</span>
-					<span class="equipment_slot_info" style="width: 70%;" id="equipment_gloves_name">None</span>
+					<span class="equipment_slot_info" style="width: 10%;" id="equipment_gloves_level">0</span>
+					<span class="equipment_slot_info" style="width: 15%;" id="equipment_gloves_power">0</span>
+					<span class="equipment_slot_info" style="width: 55%;" id="equipment_gloves_name">None</span>
 				</div>
 				<div class="equipment_slot" id="equipment_boots">
 					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Boots: </span>
-					<span class="equipment_slot_info" style="width: 10%;" id="equipment_boots_power">0</span>
-					<span class="equipment_slot_info" style="width: 70%;" id="equipment_boots_name">None</span>
+					<span class="equipment_slot_info" style="width: 10%;" id="equipment_boots_level">0</span>
+					<span class="equipment_slot_info" style="width: 15%;" id="equipment_boots_power">0</span>
+					<span class="equipment_slot_info" style="width: 55%;" id="equipment_boots_name">None</span>
 				</div>
 				<div class="equipment_slot" id="equipment_weapon">
 					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Weapon: </span>
-					<span class="equipment_slot_info" style="width: 10%;" id="equipment_weapon_power">0</span>
-					<span class="equipment_slot_info" style="width: 70%;" id="equipment_weapon_name">Fists</span>
+					<span class="equipment_slot_info" style="width: 10%;" id="equipment_weapon_level">0</span>
+					<span class="equipment_slot_info" style="width: 15%;" id="equipment_weapon_power">0</span>
+					<span class="equipment_slot_info" style="width: 55%;" id="equipment_weapon_name">Fists</span>
 				</div>
 				<br>
 				<div style="padding-left: 2px;">Explanation about stats and what they do:</div>
