--- a/idle.html
+++ b/idle.html
@@ -320,141 +320,145 @@
 
 			<!-- SHOPS -->
 			<div class = "task_window" id="shop_window" style="display: none;">
-				<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="potion_seller">
-					<div>Potion Seller</div>
-					<button id="potionSellerButton">ENTER</button>
-				</span>
-				<span style="width: 2%;"></span>
-				<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="church_buffer">
-					<div>Church</div>
-					<button id="churchButton">ENTER</button>
-				</span>
-				<span style="width: 2%;"></span>
-				<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="tavern">
-					<div>Tavern</div>
-					<button id="tavernButton">ENTER</button>
-				</span>
-			</div>
+				<!-- SHOP SELECTION -->
+				<div id="shop_window_selection" style="width: 100%; height: 100%;">
+					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="potion_seller">
+						<div>Potion Seller</div>
+						<button id="potionSellerButton">ENTER</button>
+					</span>
+					<span style="width: 2%;"></span>
+					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="church_buffer">
+						<div>Church</div>
+						<button id="churchButton">ENTER</button>
+					</span>
+					<span style="width: 2%;"></span>
+					<span style="width: 32%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;" id="tavern">
+						<div>Tavern</div>
+						<button id="tavernButton">ENTER</button>
+					</span>
+				</div>
+				
+				<!-- POTION SELLER (SHOP) -->
+				<div class="task_window" id="potion_seller_window" style="display: none; justify-content: center;">
+					<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 45%; display: flex; justify-content: center;">
+								NAME
+							</span>
+							<span style="width: 30%; display: flex; justify-content: center;">
+								PRICE
+							</span>
+							<span style="width: 25%; display: flex; justify-content: center;">
+								<div>
+								</div>
+							</span>
+						</div>
 
-			<!-- POTION SELLER (SHOP) -->
-			<div class="task_window" id="potion_seller_window" style="display: none; justify-content: center;">
-				<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 45%; display: flex; justify-content: center;">
-							NAME
-						</span>
-						<span style="width: 30%; display: flex; justify-content: center;">
-							PRICE
-						</span>
-						<span style="width: 25%; display: flex; justify-content: center;">
-							<div>
-							</div>
-						</span>
-					</div>
-
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 45%; display: flex; justify-content: center;">
-							HEALTH POTION
-						</span>
-						<span style="width: 30%; display: flex; justify-content: center;">
-							2000
-						</span>
-						<span style="width: 25%; display: flex; justify-content: center;">
-							<div>
-								<button class="buyItemButton" itemId="0">BUY</button>
-							</div>
-						</span>
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 45%; display: flex; justify-content: center;">
+								HEALTH POTION
+							</span>
+							<span style="width: 30%; display: flex; justify-content: center;">
+								2000
+							</span>
+							<span style="width: 25%; display: flex; justify-content: center;">
+								<div>
+									<button class="buyItemButton" itemId="0">BUY</button>
+								</div>
+							</span>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!-- CHURCH (SHOP) -->
-			<div class="task_window" id="church_window" style="display: none; justify-content: center;">
-				<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 25%; display: flex; justify-content: center;">
-							NAME
-						</span>
-						<span style="width: 50%; display: flex; justify-content: center;">
-							DESCRIPTION
-						</span>
-						<span style="width: 15%; display: flex; justify-content: center;">
-							PRICE
-						</span>
-						<span style="width: 10%; display: flex; justify-content: center;">
-							<div>
-							</div>
-						</span>
-					</div>
 
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 25%; display: flex; justify-content: center;">
-							+ 10 DAMAGE BLESSING
-						</span>
-						<span style="width: 50%; display: flex; justify-content: center;">
-							Applies additional damage. 60 min duration.
-						</span>
-						<span style="width: 15%; display: flex; justify-content: center;">
-							500
-						</span>
-						<span style="width: 10%; display: flex; justify-content: center;">
-							<div>
-								<button class="buyBuffButton" buffId="churchDamage" cost="500">BUY</button>
-							</div>
-						</span>
-					</div>
+				<!-- CHURCH (SHOP) -->
+				<div class="task_window" id="church_window" style="display: none; justify-content: center;">
+					<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 25%; display: flex; justify-content: center;">
+								NAME
+							</span>
+							<span style="width: 50%; display: flex; justify-content: center;">
+								DESCRIPTION
+							</span>
+							<span style="width: 15%; display: flex; justify-content: center;">
+								PRICE
+							</span>
+							<span style="width: 10%; display: flex; justify-content: center;">
+								<div>
+								</div>
+							</span>
+						</div>
+
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 25%; display: flex; justify-content: center;">
+								+ 10 DAMAGE BLESSING
+							</span>
+							<span style="width: 50%; display: flex; justify-content: center;">
+								Applies additional damage. 60 min duration.
+							</span>
+							<span style="width: 15%; display: flex; justify-content: center;">
+								500
+							</span>
+							<span style="width: 10%; display: flex; justify-content: center;">
+								<div>
+									<button class="buyBuffButton" buffId="churchDamage" cost="500">BUY</button>
+								</div>
+							</span>
+						</div>
 					
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 25%; display: flex; justify-content: center;">
-							+ 10 DEFENSE BLESSING
-						</span>
-						<span style="width: 50%; display: flex; justify-content: center;">
-							Reduces damage by flat rate. 60 min duration.
-						</span>
-						<span style="width: 15%; display: flex; justify-content: center;">
-							500
-						</span>
-						<span style="width: 10%; display: flex; justify-content: center;">
-							<div>
-								<button class="buyBuffButton" buffId="churchDefense" cost="500">BUY</button>
-							</div>
-						</span>
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 25%; display: flex; justify-content: center;">
+								+ 10 DEFENSE BLESSING
+							</span>
+							<span style="width: 50%; display: flex; justify-content: center;">
+								Reduces damage by flat rate. 60 min duration.
+							</span>
+							<span style="width: 15%; display: flex; justify-content: center;">
+								500
+							</span>
+							<span style="width: 10%; display: flex; justify-content: center;">
+								<div>
+									<button class="buyBuffButton" buffId="churchDefense" cost="500">BUY</button>
+								</div>
+							</span>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!-- TAVERN (SHOP) -->
-			<div class="task_window" id="tavern_window" style="display: none;">
-				<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 25%; display: flex; justify-content: center;">
-							NAME
-						</span>
-						<span style="width: 50%; display: flex; justify-content: center;">
-							DESCRIPTION
-						</span>
-						<span style="width: 15%; display: flex; justify-content: center;">
-							PRICE
-						</span>
-						<span style="width: 10%; display: flex; justify-content: center;">
-							<div>
-							</div>
-						</span>
-					</div>
+				<!-- TAVERN (SHOP) -->
+				<div class="task_window" id="tavern_window" style="display: none;">
+					<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 25%; display: flex; justify-content: center;">
+								NAME
+							</span>
+							<span style="width: 50%; display: flex; justify-content: center;">
+								DESCRIPTION
+							</span>
+							<span style="width: 15%; display: flex; justify-content: center;">
+								PRICE
+							</span>
+							<span style="width: 10%; display: flex; justify-content: center;">
+								<div>
+								</div>
+							</span>
+						</div>
 
-					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
-						<span style="width: 25%; display: flex; justify-content: center;">
-							+5 DAMAGE
-						</span>
-						<span style="width: 50%; display: flex; justify-content: center;">
-							Stuffs you with spicy food. You feel pain. 20 min duration.
-						</span>
-						<span style="width: 15%; display: flex; justify-content: center;">
-							500
-						</span>
-						<span style="width: 10%; display: flex; justify-content: center;">
-							<div>
-								<button class="buyBuffButton" buffId="spicyFood" cost="500">BUY</button>
-							</div>
-						</span>
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 25%; display: flex; justify-content: center;">
+								+5 DAMAGE
+							</span>
+							<span style="width: 50%; display: flex; justify-content: center;">
+								Stuffs you with spicy food. You feel pain. 20 min duration.
+							</span>
+							<span style="width: 15%; display: flex; justify-content: center;">
+								500
+							</span>
+							<span style="width: 10%; display: flex; justify-content: center;">
+								<div>
+									<button class="buyBuffButton" buffId="spicyFood" cost="500">BUY</button>
+								</div>
+							</span>
+						</div>
 					</div>
 				</div>
 			</div>
