Added escape option to battle

--- a/idle.html
+++ b/idle.html
@@ -184,8 +184,13 @@
 					</div>
 
 					<!-- Future skills and spells? Maybe -->
-					<div style="display: flex; width: 100%; height: 10%;">
+					<div style="display: flex; width: 100%; height: 15%;">
 
+					</div>
+
+					<!-- Place for button to run away from battle -->
+					<div style="display: flex; width: 100%; height: 5%; justify-content: center;">
+						<button id="battle_window_stop_battle">RUN AWAY</button>
 					</div>
 				</div>
 			</div>
