Segregation... of buttons :)
Separated task changing buttons from just window changing ones

--- a/idle.html
+++ b/idle.html
@@ -469,12 +469,16 @@
 			</div>
 
 			<div id = "control_buttons">
-				<button id="battleButton">BATTLE</button>
-				<button id="questingButton">QUESTS</button>
-				<button id="recoverHealthButton">HEAL</button>
-				<button id="trainingButton">TRAIN</button>
-				<button id="equipmentButton">EQ</button>
-				<button id="shopButton">SHOPS</button>
+				<span style="display: flex; width: 50%;">
+					<button id="battleButton">BATTLE</button>
+					<button id="questingButton">QUESTS</button>
+					<button id="recoverHealthButton">HEAL</button>
+					<button id="trainingButton">TRAIN</button>
+				</span>
+				<span style="display: flex; flex-direction: row-reverse; width: 50%;">
+					<button id="equipmentButton">EQ</button>
+					<button id="shopButton">SHOPS</button>
+				</span>
 			</div>
 		</div>
 	</div>
