Added back button to shops

--- a/idle.html
+++ b/idle.html
@@ -344,8 +344,8 @@
 				</div>
 				
 				<!-- POTION SELLER (SHOP) -->
-				<div class="task_window" id="potion_seller_window" style="display: none; justify-content: center;">
-					<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+				<div class="task_window" id="potion_seller_window" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
+					<div style="width: 80%; height: 95%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
 						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
 							<span style="width: 45%; display: flex; justify-content: center;">
 								NAME
@@ -373,11 +373,14 @@
 							</span>
 						</div>
 					</div>
+					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
+						<button class="shop_window_button_back">Go Back</button>
+					</div>
 				</div>
 
 				<!-- CHURCH (SHOP) -->
-				<div class="task_window" id="church_window" style="display: none; justify-content: center;">
-					<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+				<div class="task_window" id="church_window" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
+					<div style="width: 80%; height: 95%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
 						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
 							<span style="width: 25%; display: flex; justify-content: center;">
 								NAME
@@ -428,10 +431,13 @@
 							</span>
 						</div>
 					</div>
+					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
+						<button class="shop_window_button_back">Go Back</button>
+					</div>
 				</div>
 				<!-- TAVERN (SHOP) -->
-				<div class="task_window" id="tavern_window" style="display: none;">
-					<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+				<div class="task_window" id="tavern_window" style="display: none; flex-direction: column; align-items: center;">
+					<div style="width: 80%; height: 95%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
 						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
 							<span style="width: 25%; display: flex; justify-content: center;">
 								NAME
@@ -464,6 +470,9 @@
 								</div>
 							</span>
 						</div>
+					</div>
+					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
+						<button class="shop_window_button_back">Go Back</button>
 					</div>
 				</div>
 			</div>
