--- a/idle.html
+++ b/idle.html
@@ -372,6 +372,19 @@
 								</div>
 							</span>
 						</div>
+						<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+							<span style="width: 45%; display: flex; justify-content: center;">
+								HEALTH POTION USAGE TRESHHOLD
+							</span>
+							<span style="width: 50%; display: flex; justify-content: center;">
+								<div>
+									<input type="range" min="1" max="100" value="50" id="myRange" style="width: 100%; height: 50%; -webkit-appearance: none;">
+								</div>
+							</span>
+							<span style="width: 15%; display: flex; justify-content: center;">
+								50%
+							</span>
+						</div>
 					</div>
 					<div style="display: flex; align-items: center; justify-content: center; height: 5%; width: 100%; border-top:#000 solid 1px">
 						<button class="shop_window_button_back">Go Back</button>
