--- a/idle.html
+++ b/idle.html
@@ -377,11 +377,11 @@
 								HEALTH POTION USAGE TRESHHOLD
 							</span>
 							<span style="width: 50%; display: flex; justify-content: center;">
-								<div>
-									<input type="range" min="1" max="100" value="50" id="myRange" style="width: 100%; height: 50%; -webkit-appearance: none;">
+								<div style="display: flex; justify-content: center; align-items: center;">
+									<input type="range" min="1" max="100" value="50" id="myRange" style="width: 100%; height: 50%; -webkit-appearance: none; appearance: none;">
 								</div>
 							</span>
-							<span style="width: 15%; display: flex; justify-content: center;">
+							<span style="width: 25%; display: flex; justify-content: center;">
 								50%
 							</span>
 						</div>
