--- a/idle.html
+++ b/idle.html
@@ -376,12 +376,12 @@
 							<span style="width: 45%; display: flex; justify-content: center;">
 								HEALTH POTION USAGE TRESHHOLD
 							</span>
-							<span style="width: 50%; display: flex; justify-content: center;">
+							<span style="width: 30%; display: flex; justify-content: center;">
 								<div style="display: flex; justify-content: center; align-items: center;">
-									<input type="range" min="1" max="100" value="50" id="myRange" style="width: 100%; height: 50%; -webkit-appearance: none; appearance: none;">
+									<input id="shop_health_potion_slider" type="range" min="0" max="99" value="50">
 								</div>
 							</span>
-							<span style="width: 25%; display: flex; justify-content: center;">
+							<span id="shop_health_potion_percentage" style="width: 25%; display: flex; justify-content: center;">
 								50%
 							</span>
 						</div>
