Fix for UI when content of task window is too big

--- a/idle.html
+++ b/idle.html
@@ -108,7 +108,7 @@
 		<div class="vertical_spacer"></div>
 
 		<div id="main_panel">
-			<div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+			<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 15%;">
 				<div id="tick_info">
 					<div style="padding-top: 10px;">Tick: </div>
 					<div id="tick_progress_bar">
