Added leveling progression
- Now some functions unlock at different levels.

--- a/idle.html
+++ b/idle.html
@@ -492,14 +492,14 @@
 
 			<div id = "control_buttons">
 				<span style="display: flex; width: 50%;">
-					<button id="battleButton">BATTLE</button>
+					<button id="battleButton" style="display: none;">BATTLE</button>
 					<button id="questingButton">QUESTS</button>
-					<button id="recoverHealthButton">HEAL</button>
-					<button id="trainingButton">TRAIN</button>
+					<button id="recoverHealthButton" style="display: none;">HEAL</button>
+					<button id="trainingButton" style="display: none;">TRAIN</button>
 				</span>
 				<span style="display: flex; flex-direction: row-reverse; width: 50%;">
-					<button id="equipmentButton">EQ</button>
-					<button id="shopButton">SHOPS</button>
+					<button id="equipmentButton" style="display: none;">EQ</button>
+					<button id="shopButton" style="display: none;">SHOPS</button>
 				</span>
 			</div>
 		</div>
