Balance changes + preparation for smith
- Nerfed player exhaustion recovery depending on enemy level.
- Made early grinding zones more straight forward.
- Added button for smith with bit of html as a preparation for this system.

--- a/idle.html
+++ b/idle.html
@@ -490,6 +490,14 @@
 				</div>
 			</div>
 
+			<!-- SMITH -->
+			<div class ="task_window" id="smith_window" style="display: none;">
+				<div style="height: 10%;">Item select</div>
+				<div style="height: 90%;">Enchanting window
+					
+				</div>
+			</div>
+
 			<div id = "control_buttons">
 				<span style="display: flex; width: 50%;">
 					<button id="battleButton" style="display: none;">BATTLE</button>
@@ -500,6 +508,7 @@
 				<span style="display: flex; flex-direction: row-reverse; width: 50%;">
 					<button id="equipmentButton" style="display: none;">EQ</button>
 					<button id="shopButton" style="display: none;">SHOPS</button>
+					<button id="smithButton" style="display: none;">SMITH</button>
 				</span>
 			</div>
 		</div>
