More unfinished code for smith functionality

--- a/idle.html
+++ b/idle.html
@@ -31,6 +31,7 @@
 	<script src="training.js?v=31"></script>
 	<script src="questing.js?v=31"></script>
 	<script src="shops.js?v=31"></script>
+	<script src="smith.js?v=31"></script>
 
 	<script src="idle.js?v=31"></script>
 </head>
@@ -492,9 +493,16 @@
 
 			<!-- SMITH -->
 			<div class ="task_window" id="smith_window" style="display: none;">
-				<div style="height: 10%;">Item select</div>
-				<div style="height: 90%;">Enchanting window
-					
+				<div style="height: 10%;">Item select
+					<span style="width: 100%; height: 20%;">playerWeaponSlot</span>
+					<span style="width: 100%; height: 20%;">playerHelmetSlot</span>
+					<span style="width: 100%; height: 20%;">playerBodyArmourSlot</span>
+					<span style="width: 100%; height: 20%;">playerGlovesSlot</span>
+					<span style="width: 100%; height: 20%;">playerBootsSlot</span>
+				</div>
+
+				<div style="height: 90%;">
+					Enchanting window
 				</div>
 			</div>
 
