--- a/idle.html
+++ b/idle.html
@@ -559,37 +559,38 @@
 				<div style="height: 80%;display: flex;flex-direction: column; width: 100%;align-items: center;">
 					<div style="display: flex;height: 10%;"></div>
 					<div style="display: flex;flex-direction: column;height: 70%;width: 75%;">
-						<div style="display: flex; justify-content: center; align-items: center; height: 25%;">  
+						<div style="display: flex; justify-content: center; align-items: center; height: 24%;">  
 							<div style="display: flex; justify-content: center; align-items: center; width: 25%; height: 100%;">
-								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
-									<div>SECURITY ITEM</div>
-									<div>0</div>
-								</div>
 							</div>
 
-							<div style="width: 50%;"></div>
-
-							<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 25%; height: 100%;">
+							<div class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 50%; height: 100%;">
 								<div>PITTY</div>
 								<div>0/10</div>
 							</div>
+							
+							<div style="width: 25%;"></div>
 						</div>
+
+						<div style="height: 3px;"></div>
+
 						<div style="display: flex; justify-content: center; align-items: center; height: 50%;">
-							<div style="display: flex; justify-content: center; align-items: center; width: 25%; height: 100%;">
+							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 24%; height: 100%;">
 								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
 									<div>UPGRADE ITEM</div>
 									<br>
 									<div>5</div>
 								</div>
 							</div>
-							<div style="display: flex; justify-content: center; align-items: center; width: 50%; height: 100%;">
+							<div style="width: 3px;"></div>
+							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 50%; height: 100%;">
 								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
 									<div>WEAPON</div>
 									<br>
 									<div>+0</div>
 								</div>
 							</div>
-							<div style="display: flex; justify-content: center; align-items: center; width: 25%; height: 100%;">
+							<div style="width: 3px;"></div>
+							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 24%; height: 100%;">
 								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
 									<div>WEAPON</div>
 									<br>
@@ -597,12 +598,12 @@
 								</div>
 							</div>
 						</div>
+
+						<div style="height: 3px;"></div>
+
 						<div style="display: flex; justify-content: center; align-items: center; height: 25%;"></div>
 					</div>
 					<div style="display: flex;height: 20%;width: 75%;">
-						<div style="display: flex; justify-content: center; align-items: center; width: 33%;height: 100%;">
-							<button style="width: 95%;height: 95%;">USE SECURITY ITEM</button>
-						</div>
 						<div style="display: flex; justify-content: center; align-items: center; width: 33%;">
 							<button style="width: 95%;height: 95%;">UPGRADE</button>
 						</div>
