Upgrade UI - full rework
- Fully changed how upgrade UI will look.

Ehhh now only to add full logic to it xD

--- a/idle.html
+++ b/idle.html
@@ -496,60 +496,55 @@
 				<div style="display: flex; height: 20%; width: 100%;">
 					<span class="smith_item_select">
 						<button id="smithWeapon" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 40%;">
+							<div class="smith_item_select_text" style="height: 80%;">
 								<div>WEAPON</div>
 								<div>+0</div>
 							</div>
-							<div style="height: 20%;"></div>
-							<div style="height: 40%;">
+							<div style="height: 20%;">
 								<div style="color: white;">0/10 PITTY</div>
 							</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithHelmet" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 40%;">
+							<div class="smith_item_select_text" style="height: 80%;">
 								<div>HELMET</div>
 								<div>+0</div>
 							</div>
-							<div style="height: 20%;"></div>
-							<div style="height: 40%;">
+							<div style="height: 20%;">
 								<div style="color: white;">0/10 PITTY</div>
 							</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithBodyArmour" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 40%;">
+							<div class="smith_item_select_text" style="height: 80%;">
 								<div>BODY ARMOUR</div>
 								<div>+0</div>
 							</div>
-							<div style="height: 20%;"></div>
-							<div style="height: 40%;">
+							<div style="height: 20%;">
 								<div style="color: white;">0/10 PITTY</div>
 							</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithGloves" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 40%;">
+							<div class="smith_item_select_text" style="height: 80%;">
 								<div>GLOVES</div>
 								<div>+0</div>
 							</div>
-							<div style="height: 20%;"></div>
-							<div style="height: 40%;">
+							<div style="height: 20%;">
 								<div style="color: white;">0/10 PITTY</div>
 							</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithBoots" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 40%;">
+							<div class="smith_item_select_text" style="height: 80%;">
 								<div>BOOTS</div>
 								<div>+0</div>
 							</div>
-							<div style="height: 20%;"></div>
-							<div style="height: 40%;">
+							<div style="height: 20%;">
 								<div style="color: white;">0/10 PITTY</div>
 							</div>
 						</button>
@@ -557,57 +552,64 @@
 				</div>
 
 				<div style="height: 80%;display: flex;flex-direction: column; width: 100%;align-items: center;">
-					<div style="display: flex;height: 10%;"></div>
-					<div style="display: flex;flex-direction: column;height: 70%;width: 75%;">
-						<div style="display: flex; justify-content: center; align-items: center; height: 24%;">  
-							<div style="display: flex; justify-content: center; align-items: center; width: 25%; height: 100%;">
-							</div>
+					<div style="display: flex;height: 5%;"></div>
 
-							<div class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 50%; height: 100%;">
+
+					<div style="display: flex;flex-direction: column;height: 60%;width: 75%;">
+						<div style="height: 5px;"></div>
+
+						<div style="display: flex; justify-content: center; align-items: center; height: 98%;">
+							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 74%; height: 100%;">
+								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
+									<div>STATISTICS</div>
+									<br>
+									<div>DAMAGE 5(+1)</div>
+									<div>STRENGTH 2(+0)</div>
+									<div>DEXTERITY 2(+0)</div>
+									<div>STAMINA 2(+0)</div>
+									<div>INTELLIGECE 2(+0)</div>
+									<br>
+									<div>ATTACK SPEED 2.2(-0.1)</div>
+								</div>
+							</div>
+							<div style="width: 3px;"></div>
+							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 24%; height: 100%;">
+								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
+									<div>CURRENTLY UPGRADING</div>
+									<br>
+									<div>WEAPON +0</div>
+								</div>
+							</div>
+						</div>
+
+						<div style="height: 5px;"></div>
+					</div>
+					
+					<!-- Botom panel with upgrade button and costs -->
+					<div style="display: flex;height: 35%;width: 75%;align-items: center;">
+						<!-- Gold cost information -->
+						<div class="smith_border_1px" style="display: flex; flex-direction: column; height: 98%; width: 33%;align-items: center;">
+							<br>
+							<div>GOLD COST</div>
+							<br>
+							<div>100G</div>
+						</div>
+						<!-- UPGRADE button -->
+						<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 98%; width: 33%;">
+							<div class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 95%; height: 50%;">
 								<div>PITTY</div>
 								<div>0/10</div>
 							</div>
-							
-							<div style="width: 25%;"></div>
+							<div style="height: 5%;"></div>
+							<button style="width: 95%;height: 45%;">UPGRADE</button>
 						</div>
-
-						<div style="height: 3px;"></div>
-
-						<div style="display: flex; justify-content: center; align-items: center; height: 50%;">
-							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 24%; height: 100%;">
-								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
-									<div>UPGRADE ITEM</div>
-									<br>
-									<div>5</div>
-								</div>
-							</div>
-							<div style="width: 3px;"></div>
-							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 50%; height: 100%;">
-								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
-									<div>WEAPON</div>
-									<br>
-									<div>+0</div>
-								</div>
-							</div>
-							<div style="width: 3px;"></div>
-							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 24%; height: 100%;">
-								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
-									<div>WEAPON</div>
-									<br>
-									<div>+1</div>
-								</div>
-							</div>
+						<!-- Item cost information -->
+						<div class="smith_border_1px" style="display: flex; flex-direction: column; height: 98%; width: 34%;align-items: center;">
+							<br>
+							<div>ITEM COST</div>
+							<br>
+							<div>NOTHING</div>
 						</div>
-
-						<div style="height: 3px;"></div>
-
-						<div style="display: flex; justify-content: center; align-items: center; height: 25%;"></div>
-					</div>
-					<div style="display: flex;height: 20%;width: 75%;">
-						<div style="display: flex; justify-content: center; align-items: center; width: 33%;">
-							<button style="width: 95%;height: 95%;">UPGRADE</button>
-						</div>
-						<div style="width: 34%;"></div>
 					</div>
 				</div>
 			</div>
