Fixed break lines for Firefox
Dear Mozilla, why?

--- a/idle.html
+++ b/idle.html
@@ -562,13 +562,13 @@
 							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 74%; height: 100%;">
 								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
 									<div>STATISTICS</div>
-									<br>
+									<div class="space"></div>
 									<div>DAMAGE 5(+1)</div>
 									<div>STRENGTH 2(+0)</div>
 									<div>DEXTERITY 2(+0)</div>
 									<div>STAMINA 2(+0)</div>
 									<div>INTELLIGECE 2(+0)</div>
-									<br>
+									<div class="space"></div>
 									<div>ATTACK SPEED 2.2(-0.1)</div>
 								</div>
 							</div>
@@ -576,7 +576,7 @@
 							<div class="smith_border_1px" style="display: flex; justify-content: center; align-items: center; width: 24%; height: 100%;">
 								<div style="display: flex; flex-direction: column; width: 50%; height: 50%; align-items: center; justify-content: center;">
 									<div>CURRENTLY UPGRADING</div>
-									<br>
+									<div class="space"></div>
 									<div>WEAPON +0</div>
 								</div>
 							</div>
@@ -589,9 +589,9 @@
 					<div style="display: flex;height: 35%;width: 75%;align-items: center;">
 						<!-- Gold cost information -->
 						<div class="smith_border_1px" style="display: flex; flex-direction: column; height: 98%; width: 33%;align-items: center;">
-							<br>
+							<div class="space"></div>
 							<div>GOLD COST</div>
-							<br>
+							<div class="space"></div>
 							<div>100G</div>
 						</div>
 						<!-- UPGRADE button -->
@@ -605,9 +605,9 @@
 						</div>
 						<!-- Item cost information -->
 						<div class="smith_border_1px" style="display: flex; flex-direction: column; height: 98%; width: 34%;align-items: center;">
-							<br>
+							<div class="space"></div>
 							<div>ITEM COST</div>
-							<br>
+							<div class="space"></div>
 							<div>NOTHING</div>
 						</div>
 					</div>
