Smith - First part of logic
- Buttons for selecting the item to upgrade should work now.
- Added basic numbers for pitty system into the items.

--- a/idle.html
+++ b/idle.html
@@ -496,57 +496,67 @@
 				<div style="display: flex; height: 20%; width: 100%;">
 					<span class="smith_item_select">
 						<button id="smithWeapon" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 80%;">
-								<div>WEAPON</div>
-								<div>+0</div>
+							<div class="smith_item_select_text">
+								<span>
+									<div id="smithWeapon_rarity">COMMON</div>
+									<div>WEAPON</div>
+								</span>
+								<span style="width: 5%;"></span>
+								<span id="smithWeapon_upgradeLevel">+0</span>
 							</div>
-							<div style="height: 20%;">
-								<div style="color: white;">0/10 PITTY</div>
-							</div>
+							<div id="smithWeapon_pitty" style="height: 30%;color: white;">0/0 PITTY</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithHelmet" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 80%;">
-								<div>HELMET</div>
-								<div>+0</div>
+							<div class="smith_item_select_text">
+								<span>
+									<div id="smithHelmet_rarity">COMMON</div>
+									<div>HELMET</div>
+								</span>
+								<span style="width: 5%;"></span>
+								<span id="smithHelmet_upgradeLevel">+0</span>
 							</div>
-							<div style="height: 20%;">
-								<div style="color: white;">0/10 PITTY</div>
-							</div>
+							<div id="smithHelmet_pitty" style="height: 30%;color: white;">0/0 PITTY</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithBodyArmour" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 80%;">
-								<div>BODY ARMOUR</div>
-								<div>+0</div>
+							<div class="smith_item_select_text">
+								<span>
+									<div id="smithBodyArmour_rarity">COMMON</div>
+									<div>BODY ARMOUR</div>
+								</span>
+								<span style="width: 5%;"></span>
+								<span id="smithBodyArmour_upgradeLevel">+0</span>
 							</div>
-							<div style="height: 20%;">
-								<div style="color: white;">0/10 PITTY</div>
-							</div>
+							<div id="smithBodyArmour_pitty" style="height: 30%;color: white;">0/0 PITTY</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithGloves" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 80%;">
-								<div>GLOVES</div>
-								<div>+0</div>
+							<div class="smith_item_select_text">
+								<span>
+									<div id="smithGloves_rarity">COMMON</div>
+									<div>GLOVES</div>
+								</span>
+								<span style="width: 5%;"></span>
+								<span id="smithGloves_upgradeLevel">+0</span>
 							</div>
-							<div style="height: 20%;">
-								<div style="color: white;">0/10 PITTY</div>
-							</div>
+							<div id="smithGloves_pitty" style="height: 30%;color: white;">0/0 PITTY</div>
 						</button>
 					</span>
 					<span class="smith_item_select">
 						<button id="smithBoots" class="smith_item_select_button">
-							<div class="smith_item_select_text" style="height: 80%;">
-								<div>BOOTS</div>
-								<div>+0</div>
+							<div class="smith_item_select_text">
+								<span>
+									<div id="smithBoots_rarity">COMMON</div>
+									<div>BOOTS</div>
+								</span>
+								<span style="width: 5%;"></span>
+								<span id="smithBoots_upgradeLevel">+0</span>
 							</div>
-							<div style="height: 20%;">
-								<div style="color: white;">0/10 PITTY</div>
-							</div>
+							<div id="smithBoots_pitty" style="height: 30%;color: white;">0/0 PITTY</div>
 						</button>
 					</span>
 				</div>
@@ -564,12 +574,6 @@
 									<div>STATISTICS</div>
 									<div class="space"></div>
 									<div>DAMAGE 5(+1)</div>
-									<div>STRENGTH 2(+0)</div>
-									<div>DEXTERITY 2(+0)</div>
-									<div>STAMINA 2(+0)</div>
-									<div>INTELLIGECE 2(+0)</div>
-									<div class="space"></div>
-									<div>ATTACK SPEED 2.2(-0.1)</div>
 								</div>
 							</div>
 							<div style="width: 3px;"></div>
