Smith - Costs and information
- Finished rest of info panel for upgrade-ing items.
- Big problem for UX: There is no information when you can upgrade, I will need to think how to add this information to the screen, somehow.

--- a/idle.html
+++ b/idle.html
@@ -584,7 +584,7 @@
 									<div>SELECTED</div>
 									<div class="space"></div>
 									<div id="smithInfo_itemRarity">COMMON</div>
-									<div>
+									<div style="display: flex;flex-direction: column;align-items: center;">
 										<span id="smithInfo_itemSlot">WEAPON</span>
 										<span id="smithInfo_itemUpgradeLevel">+0</span>
 									</div>
@@ -602,31 +602,31 @@
 							<div class="space"></div>
 							<div>GOLD COST</div>
 							<div class="space"></div>
-							<div>0G</div>
+							<div id="smithInfo_goldCost"></div>
 						</div>
 						<!-- UPGRADE button -->
 						<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 98%; width: 33%;">
 							<div style="display: flex; width: 95%; height: 50%;">
 								<span class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center;width: 49%;">
 									<div>PITTY</div>
-									<div>0/0</div>
+									<div id ="smithInfo_pitty">0/0</div>
 								</span>
 								<span style="width: 2%;"></span>
 								<span class="smith_border_1px" style="display: flex; flex-direction: column; justify-content: center; align-items: center;width: 49%;">
 									<div>UPGRADE</div>
 									<div>CHANCE</div>
-									<div>0%</div>
+									<div id="smithInfo_upgradeChance">0%</div>
 								</span>
 							</div>
 							<div style="height: 5%;"></div>
-							<button style="width: 95%;height: 45%;">UPGRADE</button>
+							<button style="width: 95%;height: 45%;color: white;text-shadow: 1px 1px 2px #000000;">UPGRADE</button>
 						</div>
 						<!-- Item cost information -->
 						<div class="smith_border_1px" style="display: flex; flex-direction: column; height: 98%; width: 34%;align-items: center;">
 							<div class="space"></div>
 							<div>ITEM COST</div>
 							<div class="space"></div>
-							<div>NOTHING</div>
+							<div id="smithInfo_itemCost"></div>
 						</div>
 					</div>
 				</div>
