Smith - Last UI additions
- UI should be mostly ready, there is still no information what is missing for upgrade or how many upgrade levels you can have but hey! It's time for functionality!

--- a/idle.html
+++ b/idle.html
@@ -619,7 +619,7 @@
 								</span>
 							</div>
 							<div style="height: 5%;"></div>
-							<button style="width: 95%;height: 45%;color: white;text-shadow: 1px 1px 2px #000000;">UPGRADE</button>
+							<button id="smithInfo_upgradeButton" class="smith_disabledButton" style="width: 95%;height: 45%;">UPGRADE</button>
 						</div>
 						<!-- Item cost information -->
 						<div class="smith_border_1px" style="display: flex; flex-direction: column; height: 98%; width: 34%;align-items: center;">
