--- a/idle.html
+++ b/idle.html
@@ -32,6 +32,7 @@
 	<script src="questing.js?v=34"></script>
 	<script src="shops.js?v=34"></script>
 	<script src="smith.js?v=34"></script>
+	<script src="dungeon.js"></script>
 
 	<script src="idle.js?v=34"></script>
 </head>
