--- a/idle.html
+++ b/idle.html
@@ -14,6 +14,7 @@
 	</style>
 
 	<link rel="stylesheet" href="idle.css?v=34">
+	<link rel="stylesheet" href="dungeon.css">
 	
 	<script src="uiFunctions.js?v=34"></script>
 
@@ -660,11 +661,17 @@
 				<div id="dungeonWindow_insideDungeon" style="display: none;flex-direction: column; width: 100%;height: 100%;border:#000 solid 1px;">
 					<div style="display: flex;align-items: center;justify-content: center;width: 100%;height: 80%;">ENEMIES</div>
 					<div style="display: flex;justify-content: center;align-items: center;width: 100%;height: 20%;">
-						<div style="display: flex;justify-content: center;align-items: center;height: 100%;width: 20%;border: #000 solid 1px;">TANK</div>
-						<div style="display: flex;justify-content: center;align-items: center;height: 100%;width: 20%;border: #000 solid 1px;">HEALER</div>
-						<div style="display: flex;justify-content: center;align-items: center;height: 100%;width: 20%;border: #000 solid 1px;">PLAYER</div>
-						<div style="display: flex;justify-content: center;align-items: center;height: 100%;width: 20%;border: #000 solid 1px;">DPS2</div>
-						<div style="display: flex;justify-content: center;align-items: center;height: 100%;width: 20%;border: #000 solid 1px;">DPS3</div>
+						<div class="dungeon_allySquare">TANK</div>
+						<div class="dungeon_allySquare">HEALER</div>
+						<div class="dungeon_allySquare">
+							<div>PLAYER</div>
+							<div class="dungeon_hpBarOutside">
+								<div class="dungeon_hpBarInside">
+								</div>
+							</div>
+						</div>
+						<div class="dungeon_allySquare">DPS2</div>
+						<div class="dungeon_allySquare">DPS3</div>
 					</div>
 				</div>
 			</div>
